upload second version and the output sample

--- a/auto_label.ipynb
+++ b/auto_label.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,12 @@
     "nlp = spacy.load(\"en_core_web_lg\")\n",
     "\n",
     "# use your own key\n",
-    "api_key = \"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\"\n",
+    "api_key = \"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\"\n",
     "client = OpenAI(api_key=api_key)\n",
     "model_id = \"gpt-4-1106-preview\"\n",
     "\n",
     "\n",
-    "file_path = r\"C:\\Users\\ee527\\Desktop\\Big Data Analytics\\final_project\\podcast_transcript\\5\\test.txt\"\n",
+    "file_path = r\"D:\\GitHub\\Unsuperviseed_SQuAD_Dataset_AutoLabeler\\test.txt\"\n",
     "with open(file_path, 'r') as file:\n",
     "    file_contents = file.read()"
    ]
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,12 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# prompt engineer here, need to change here \n",
-    "number = 5\n",
+    "number = 20\n",
     "messages = [\n",
     "    \n",
     "        {\"role\": \"user\", \"content\": f\"Read this transcript first: [{file_contents}]. Then give me {number} questions and the complete reference sentence you find in the transcript. Remember, there are some advertisement inside it, please recognize them and dont use those information to ask question. Remember, musn't abbreviate or paraphrase the reference sentence, the refernce sentence must be completely same in the transcript. Lastly, the response should be this format: Question: Who is Donald? Reference: I dont know. Question: Where does he live? Reference: He lives in NYC\"}\n",
@@ -67,9 +67,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question: Who voted to indict former President Donald Trump?\n",
+      "Reference: Well, it's been a truly historic week as a Manhattan Grand jury voted to in Diteformer President Donald Trump.\n",
+      "\n",
+      "Question: Who are Andrew Weissmann and Mary McCord?\n",
+      "Reference: MSMBC legal analysts and veteran prosecutors Andrew Weissman and Mary McCord are back with their insights.\n",
+      "\n",
+      "Question: What experiences do Andrew Weissmann and Mary McCord have?\n",
+      "Reference: Based on their 50 plus years of collective experience of building some of the most complex criminal cases in US history.\n",
+      "\n",
+      "Question: What is the podcast about?\n",
+      "Reference: This podcast is a special inside look at how prosecutors from Alvin Bragg to Fanny Willis to Jack Smith build their toughest cases.\n",
+      "\n",
+      "Question: Who is providing their insights in the podcast?\n",
+      "Reference: MSMBC legal analysts and veteran prosecutors Andrew Weissman and Mary McCord are back with their insights.\n",
+      "\n",
+      "Question: What type of case is mentioned to happen at the end of April in New York?\n",
+      "Reference: He's supposed to be in New York next month for of all things a civil case where he is accused of rape.\n",
+      "\n",
+      "Question: What consequences are mentioned if Trump doesn’t appear for a specific case?\n",
+      "Reference: And if he doesn't appear for that, a default can be entered against him in a case where it's the allegations are quite serious.\n",
+      "\n",
+      "Question: What insight does the podcast give regarding the criminal charges against Trump?\n",
+      "Reference: But there's going to be a long time as you and I both know from having tried a ton of cases in a variety of different jurisdictions that you don't just indict somebody and there's a trial the next day.\n",
+      "\n",
+      "Question: What is a defendant entitled to that may prolong the trial process?\n",
+      "Reference: The defendant is entitled to so many procedures.\n",
+      "\n",
+      "Question: What must prosecutors do as part of the due process clause?\n",
+      "Reference: They also have a lot of obligations as to fulfill their obligations as part of the due process clause of the Constitution.\n",
+      "\n",
+      "Question: What type of evidence is mentioned that the defendant is entitled to?\n",
+      "Reference: Discovery is turned over. All sorts of search warrant material is turned over.\n",
+      "\n",
+      "Question: What kind of motions can the defendant make?\n",
+      "Reference: Then the defendant's entitled to make all sorts of motions for more discovery, Brady material.\n",
+      "\n",
+      "Question: What is Mary McCord's expertise in the legal field?\n",
+      "Reference: Used to be an appellate lawyer.\n",
+      "\n",
+      "Question: What speculation is made about motions that Trump's lawyers might file?\n",
+      "Reference: We're already hearing though from some of Trump's former lawyers and current lawyers that, oh, motions to dismiss are going to be imminent.\n",
+      "\n",
+      "Question: How common are motions to dismiss in criminal cases according to the conversation?\n",
+      "Reference: Motions to dismiss a criminal case. That's not the most common thing.\n",
+      "\n",
+      "Question: What is different about grounds for dismissal in criminal cases versus civil cases?\n",
+      "Reference: In a criminal case, it's very different because there aren't that many grounds where you could get an entire criminal case thrown out on legal grounds by a judge.\n",
+      "\n",
+      "Question: Why are legal issues normally resolved in advance of a criminal trial?\n",
+      "Reference: Because normally criminal cases are based on a factual scenario that's alleged in the indictment that violates laws and that the legal issues get resolved by a court in advance of a trial.\n",
+      "\n",
+      "Question: Who determines the factual scenario during a criminal trial?\n",
+      "Reference: But then during a trial, that's when a jury wore a judge.\n",
+      "\n",
+      "Question: What is the context of the discussion between Andrew Weissmann and Mary McCord?\n",
+      "Reference: Good to be back again. The plot continues.\n",
+      "\n",
+      "Question: What indication is there that the podcast episode will offer in-depth insights?\n",
+      "Reference: This podcast is a special inside look at how prosecutors from Alvin Bragg to Fanny Willis to Jack Smith build their toughest cases.\n",
+      "\n",
+      "Question: Why would there be many reasons for Trump to show up to the civil case?\n",
+      "Reference: So he can be arrested then if he doesn't self surrender. And if he doesn't appear for that, a default can be entered against him in a case where it's the allegations are quite serious.\n"
+     ]
+    }
+   ],
    "source": [
     "# initial gpt and start inference\n",
     "# dont need to change here\n",
@@ -91,9 +160,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "q:\n",
+      "Who voted to indict former President Donald Trump?\n",
+      "a:\n",
+      "Well, it's been a truly historic week as a Manhattan Grand jury voted to in Diteformer President Donald Trump\n",
+      "q:\n",
+      "Who are Andrew Weissmann and Mary McCord?\n",
+      "a:\n",
+      "MSMBC legal analysts and veteran prosecutors Andrew Weissman and Mary McCord are back with their insights\n",
+      "q:\n",
+      "What experiences do Andrew Weissmann and Mary McCord have?\n",
+      "a:\n",
+      "Based on their 50 plus years of collective experience of building some of the most complex criminal cases in US history\n",
+      "q:\n",
+      "What is the podcast about?\n",
+      "a:\n",
+      "This podcast is a special inside look at how prosecutors from Alvin Bragg to Fanny Willis to Jack Smith build their toughest cases\n",
+      "q:\n",
+      "Who is providing their insights in the podcast?\n",
+      "a:\n",
+      "MSMBC legal analysts and veteran prosecutors Andrew Weissman and Mary McCord are back with their insights\n",
+      "q:\n",
+      "What type of case is mentioned to happen at the end of April in New York?\n",
+      "a:\n",
+      "He's supposed to be in New York next month for of all things a civil case where he is accused of rape\n",
+      "q:\n",
+      "What consequences are mentioned if Trump doesn’t appear for a specific case?\n",
+      "a:\n",
+      "And if he doesn't appear for that, a default can be entered against him in a case where it's the allegations are quite serious\n",
+      "q:\n",
+      "What insight does the podcast give regarding the criminal charges against Trump?\n",
+      "a:\n",
+      "But there's going to be a long time as you and I both know from having tried a ton of cases in a variety of different jurisdictions that you don't just indict somebody and there's a trial the next day\n",
+      "q:\n",
+      "What is a defendant entitled to that may prolong the trial process?\n",
+      "a:\n",
+      "The defendant is entitled to so many procedures\n",
+      "q:\n",
+      "What must prosecutors do as part of the due process clause?\n",
+      "a:\n",
+      "They also have a lot of obligations as to fulfill their obligations as part of the due process clause of the Constitution\n",
+      "q:\n",
+      "What type of evidence is mentioned that the defendant is entitled to?\n",
+      "a:\n",
+      "Discovery is turned over. All sorts of search warrant material is turned over\n",
+      "q:\n",
+      "What kind of motions can the defendant make?\n",
+      "a:\n",
+      "Then the defendant's entitled to make all sorts of motions for more discovery, Brady material\n",
+      "q:\n",
+      "What is Mary McCord's expertise in the legal field?\n",
+      "a:\n",
+      "Used to be an appellate lawyer\n",
+      "q:\n",
+      "What speculation is made about motions that Trump's lawyers might file?\n",
+      "a:\n",
+      "We're already hearing though from some of Trump's former lawyers and current lawyers that, oh, motions to dismiss are going to be imminent\n",
+      "q:\n",
+      "How common are motions to dismiss in criminal cases according to the conversation?\n",
+      "a:\n",
+      "Motions to dismiss a criminal case. That's not the most common thing\n",
+      "q:\n",
+      "What is different about grounds for dismissal in criminal cases versus civil cases?\n",
+      "a:\n",
+      "In a criminal case, it's very different because there aren't that many grounds where you could get an entire criminal case thrown out on legal grounds by a judge\n",
+      "q:\n",
+      "Why are legal issues normally resolved in advance of a criminal trial?\n",
+      "a:\n",
+      "Because normally criminal cases are based on a factual scenario that's alleged in the indictment that violates laws and that the legal issues get resolved by a court in advance of a trial\n",
+      "q:\n",
+      "Who determines the factual scenario during a criminal trial?\n",
+      "a:\n",
+      "But then during a trial, that's when a jury wore a judge\n",
+      "q:\n",
+      "What is the context of the discussion between Andrew Weissmann and Mary McCord?\n",
+      "a:\n",
+      "Good to be back again. The plot continues\n",
+      "q:\n",
+      "What indication is there that the podcast episode will offer in-depth insights?\n",
+      "a:\n",
+      "This podcast is a special inside look at how prosecutors from Alvin Bragg to Fanny Willis to Jack Smith build their toughest cases\n",
+      "q:\n",
+      "Why would there be many reasons for Trump to show up to the civil case?\n",
+      "a:\n",
+      "So he can be arrested then if he doesn't self surrender. And if he doesn't appear for that, a default can be entered against him in a case where it's the allegations are quite serious\n"
+     ]
+    }
+   ],
    "source": [
     "# test question or answer\n",
     "\n",
@@ -132,6 +292,7 @@
     "        answer = line[colon_index + 1:].strip()\n",
     "        answer = remove_outer_quotes(answer)\n",
     "        answer = answer[:-1]\n",
+    "        answer = answer.replace(\"...\", \"\")\n",
     "        print(answer)\n",
     "        questions_and_answers.append((question, answer))\n",
     "        \n",
@@ -141,9 +302,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gpt4 question:  Who voted to indict former President Donald Trump?\n",
+      "gpt4 answer:  Well, it's been a truly historic week as a Manhattan Grand jury voted to in Diteformer President Donald Trump\n",
+      "Find! Completely match.\n",
+      "\n",
+      "gpt4 question:  Who are Andrew Weissmann and Mary McCord?\n",
+      "gpt4 answer:  MSMBC legal analysts and veteran prosecutors Andrew Weissman and Mary McCord are back with their insights\n",
+      "Find! Completely match.\n",
+      "\n",
+      "gpt4 question:  What experiences do Andrew Weissmann and Mary McCord have?\n",
+      "gpt4 answer:  Based on their 50 plus years of collective experience of building some of the most complex criminal cases in US history\n",
+      "Find! The first word in transcript is lowercase.\n",
+      "\n",
+      "gpt4 question:  What is the podcast about?\n",
+      "gpt4 answer:  This podcast is a special inside look at how prosecutors from Alvin Bragg to Fanny Willis to Jack Smith build their toughest cases\n",
+      "Find! Completely match.\n",
+      "\n",
+      "gpt4 question:  Who is providing their insights in the podcast?\n",
+      "gpt4 answer:  MSMBC legal analysts and veteran prosecutors Andrew Weissman and Mary McCord are back with their insights\n",
+      "Find! Completely match.\n",
+      "\n",
+      "gpt4 question:  What type of case is mentioned to happen at the end of April in New York?\n",
+      "gpt4 answer:  He's supposed to be in New York next month for of all things a civil case where he is accused of rape\n",
+      "Find! The first word in transcript is lowercase.\n",
+      "\n",
+      "gpt4 question:  What consequences are mentioned if Trump doesn’t appear for a specific case?\n",
+      "gpt4 answer:  And if he doesn't appear for that, a default can be entered against him in a case where it's the allegations are quite serious\n",
+      "Find! Completely match.\n",
+      "\n",
+      "gpt4 question:  What insight does the podcast give regarding the criminal charges against Trump?\n",
+      "gpt4 answer:  But there's going to be a long time as you and I both know from having tried a ton of cases in a variety of different jurisdictions that you don't just indict somebody and there's a trial the next day\n",
+      "Find! Completely match.\n",
+      "\n",
+      "gpt4 question:  What is a defendant entitled to that may prolong the trial process?\n",
+      "gpt4 answer:  The defendant is entitled to so many procedures\n",
+      "Find! The first word in transcript is lowercase.\n",
+      "\n",
+      "gpt4 question:  What must prosecutors do as part of the due process clause?\n",
+      "gpt4 answer:  They also have a lot of obligations as to fulfill their obligations as part of the due process clause of the Constitution\n",
+      "Find! The first word in transcript is lowercase.\n",
+      "\n",
+      "gpt4 question:  What type of evidence is mentioned that the defendant is entitled to?\n",
+      "gpt4 answer:  Discovery is turned over. All sorts of search warrant material is turned over\n",
+      "Find! The first word in transcript is lowercase.\n",
+      "\n",
+      "gpt4 question:  What kind of motions can the defendant make?\n",
+      "gpt4 answer:  Then the defendant's entitled to make all sorts of motions for more discovery, Brady material\n",
+      "Find! The first word in transcript is lowercase.\n",
+      "\n",
+      "gpt4 question:  What is Mary McCord's expertise in the legal field?\n",
+      "gpt4 answer:  Used to be an appellate lawyer\n",
+      "Find! The first word in transcript is lowercase.\n",
+      "\n",
+      "gpt4 question:  What speculation is made about motions that Trump's lawyers might file?\n",
+      "gpt4 answer:  We're already hearing though from some of Trump's former lawyers and current lawyers that, oh, motions to dismiss are going to be imminent\n",
+      "Find! Completely match.\n",
+      "\n",
+      "gpt4 question:  How common are motions to dismiss in criminal cases according to the conversation?\n",
+      "gpt4 answer:  Motions to dismiss a criminal case. That's not the most common thing\n",
+      "Find! The first word in transcript is lowercase.\n",
+      "\n",
+      "gpt4 question:  What is different about grounds for dismissal in criminal cases versus civil cases?\n",
+      "gpt4 answer:  In a criminal case, it's very different because there aren't that many grounds where you could get an entire criminal case thrown out on legal grounds by a judge\n",
+      "Find! Completely match.\n",
+      "\n",
+      "gpt4 question:  Why are legal issues normally resolved in advance of a criminal trial?\n",
+      "gpt4 answer:  Because normally criminal cases are based on a factual scenario that's alleged in the indictment that violates laws and that the legal issues get resolved by a court in advance of a trial\n",
+      "Find! Completely match.\n",
+      "\n",
+      "gpt4 question:  Who determines the factual scenario during a criminal trial?\n",
+      "gpt4 answer:  But then during a trial, that's when a jury wore a judge\n",
+      "Find! Completely match.\n",
+      "\n",
+      "gpt4 question:  What is the context of the discussion between Andrew Weissmann and Mary McCord?\n",
+      "gpt4 answer:  Good to be back again. The plot continues\n",
+      "Find! Completely match.\n",
+      "\n",
+      "gpt4 question:  What indication is there that the podcast episode will offer in-depth insights?\n",
+      "gpt4 answer:  This podcast is a special inside look at how prosecutors from Alvin Bragg to Fanny Willis to Jack Smith build their toughest cases\n",
+      "Find! Completely match.\n",
+      "\n",
+      "gpt4 question:  Why would there be many reasons for Trump to show up to the civil case?\n",
+      "gpt4 answer:  So he can be arrested then if he doesn't self surrender. And if he doesn't appear for that, a default can be entered against him in a case where it's the allegations are quite serious\n",
+      "Find! Completely match.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# sentence matching\n",
     "\n",
@@ -300,13 +552,6 @@
     "similarity = doc.similarity(target_doc)\n",
     "print(similarity)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
